fikset på search siden, meldinger siden, lagt til topbar animasjon på alle sidene for mobilskjerm, laget nye componenter der koden før var kun i en page, slik at koden er mer modulær. Lagt til skalering på en del elementer som ikke hadde det før

--- a/clientapp/src/Styles/Rays.css
+++ b/clientapp/src/Styles/Rays.css
@@ -34,3 +34,23 @@
 .post-textarea::-webkit-scrollbar-thumb:hover {
     background-color: #0d8ddb; /* Darker blue on hover */
 }
+
+/* Grey version - Copy all styles from post-textarea */
+.post-textarea-grey::-webkit-scrollbar {
+    width: 5px; /* Width of the scrollbar */
+}
+
+.post-textarea-grey::-webkit-scrollbar-track {
+    background: #3b3f52; /* Same background color of the track */
+    border-radius: 10px; /* Round the track corners */
+}
+
+.post-textarea-grey::-webkit-scrollbar-thumb {
+    background-color: grey; /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Round the thumb corners */
+}
+
+/* Optional: Change thumb color on hover for grey scrollbar */
+.post-textarea-grey::-webkit-scrollbar-thumb:hover {
+    background-color: #808080; /* Darker grey on hover */
+}
