--- a/clientapp/src/Styles/Rays.css
+++ b/clientapp/src/Styles/Rays.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .Login-Bakgrunn {
-    @apply bg-orange-200;
+    @apply bg-emerald-200;
 }
 
 .Landing-page-box {
@@ -53,4 +53,19 @@
 /* Optional: Change thumb color on hover for grey scrollbar */
 .post-textarea-grey::-webkit-scrollbar-thumb:hover {
     background-color: #808080; /* Darker grey on hover */
+}
+/* src/styles/tailwind.css */
+@font-face {
+    font-family: 'ClashGrotesk';
+    src: url('./fonts/ClashGrotesk-Variable.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'General';
+    src: url('./fonts/GeneralSans-Variable.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Lexend';
+    src: url('./fonts/Lexend-VariableFont.ttf') format('truetype');
 }
