Co-authored-by: Rafey Ul-Islam Afzal <R4f3y@users.noreply.github.com> Co-authored-by: shoeb03 <shoeb03@users.noreply.github.com> Co-authored-by: Ali-Ahmad-Shafiq <Ali-Ahmad-Shafiq@users.noreply.github.com>

--- a/clientapp/src/Styles/Rays.css
+++ b/clientapp/src/Styles/Rays.css
@@ -55,6 +55,7 @@
     background-color: #808080; /* Darker grey on hover */
 }
 /* src/styles/tailwind.css */
+/* These are the different fonts*/
 @font-face {
     font-family: 'ClashGrotesk';
     src: url('./fonts/ClashGrotesk-Variable.ttf') format('truetype');
